message MapMutCSetKeyMessage {
  required string sender = 1;
  required uint32 uniqueNumber = 2;
  optional bytes args = 3;
}
